[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/main_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/settings_dialog/settings_dialog.gd" type="Script" id=2]

[node name="SettingsDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -215.0
margin_right = 172.0
margin_bottom = 215.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 31.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 73.0
margin_top = 65.0
margin_right = 286.0
margin_bottom = 334.0

[node name="NewGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_right = 213.0
margin_bottom = 87.9257
text = "New game"

[node name="MainScreenButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 91.0
margin_right = 213.813
margin_bottom = 178.926
text = "Main screen"

[node name="CloseButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 213.0
margin_bottom = 269.926
theme_type_variation = "RedButton"
text = "Close"

[connection signal="pressed" from="CenterContainer/VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainScreenButton" to="." method="_on_MainScreenButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
